--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -19,6 +19,8 @@
   "Tooltip_VisitWebsite": "Visitar site",
   "Tooltip_ToggleTheme": "Alternar Tema do Winhance",
   "Tooltip_Donate": "Doar para Apoiar o Desenvolvimento",
+  "Tooltip_ReportBug": "Reportar um erro",
+  "Menu_ReportBug": "Reportar um erro",
   "Settings_Title": "Configurações do Winhance",
   "Settings_Menu_Language": "Idioma",
   "Settings_Language_Description": "Selecione o idioma de exibição do aplicativo",
