--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -19,6 +19,8 @@
   "Tooltip_VisitWebsite": "Visitar sitio web",
   "Tooltip_ToggleTheme": "Alternar Tema de Winhance",
   "Tooltip_Donate": "Donar para apoyar el desarrollo",
+  "Tooltip_ReportBug": "Reportar un error",
+  "Menu_ReportBug": "Reportar un error",
   "Settings_Title": "Configuración de Winhance",
   "Settings_Menu_Language": "Idioma",
   "Settings_Language_Description": "Selecciona el idioma de visualización de la aplicación",
