fix: Add localization for OptionWarnings, OptionTooltips, and OptionConfirmations
Fix SettingGroup Translation Keys

--- a/src/Winhance.WPF/Localization/de.json
+++ b/src/Winhance.WPF/Localization/de.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Inhaltsübermittlung & Werbung",
   "SettingGroup_Lock_Screen": "Sperrbildschirm",
   "SettingGroup_Speech": "Sprache",
-  "SettingGroup_Inking_Typing_Personalization": "Freihand- und Tipp-Personalisierung",
+  "SettingGroup_Inking_and_typing_personalization": "Freihand- und Tipp-Personalisierung",
   "SettingGroup_Diagnostics_Feedback": "Diagnose & Feedback",
   "SettingGroup_Activity_History": "Aktivitätsverlauf",
-  "SettingGroup_Search_Permissions": "Suchberechtigungen",
+  "SettingGroup_Search_permissions": "Suchberechtigungen",
   "SettingGroup_App_Permissions": "App-Berechtigungen",
   "Setting_sound-startup_Name": "Startsound beim Hochfahren",
   "Setting_sound-startup_Description": "Spielt den Windows-Startsound ab, wenn Ihr Computer hochfährt",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "USB-Einstellungen",
   "SettingGroup_IntelRGraphicsSettings": "Intel(R)-Grafikeinstellungen",
   "SettingGroup_PowerButtonsandLid": "Netzschalter und Zuklappen",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Prozessor-Energieverwaltung",
   "SettingGroup_MultimediaSettings": "Multimedia-Einstellungen",
   "SettingGroup_Battery": "Akku",
