--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Content Delivery \u0026 Advertising",
   "SettingGroup_Lock_Screen": "Lock Screen",
   "SettingGroup_Speech": "Speech",
-  "SettingGroup_Inking_Typing_Personalization": "Inking and typing personalization",
+  "SettingGroup_Inking_and_typing_personalization": "Inking and typing personalization",
   "SettingGroup_Diagnostics_Feedback": "Diagnostics \u0026 Feedback",
   "SettingGroup_Activity_History": "Activity History",
-  "SettingGroup_Search_Permissions": "Search permissions",
+  "SettingGroup_Search_permissions": "Search permissions",
   "SettingGroup_App_Permissions": "App Permissions",
   "Setting_sound-startup_Name": "Startup Sound During Boot",
   "Setting_sound-startup_Description": "Play the Windows startup sound when your computer boots up",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "USB settings",
   "SettingGroup_IntelRGraphicsSettings": "Intel(R) Graphics Settings",
   "SettingGroup_PowerButtonsandLid": "Power Buttons and Lid",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Processor Power Management",
   "SettingGroup_MultimediaSettings": "Multimedia Settings",
   "SettingGroup_Battery": "Battery",
