--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Entrega de Contenido y Publicidad",
   "SettingGroup_Lock_Screen": "Pantalla de Bloqueo",
   "SettingGroup_Speech": "Voz",
-  "SettingGroup_Inking_Typing_Personalization": "Personalización de entrada manuscrita y escritura",
+  "SettingGroup_Inking_and_typing_personalization": "Personalización de entrada manuscrita y escritura",
   "SettingGroup_Diagnostics_Feedback": "Diagnósticos y Comentarios",
   "SettingGroup_Activity_History": "Historial de Actividad",
-  "SettingGroup_Search_Permissions": "Permisos de Búsqueda",
+  "SettingGroup_Search_permissions": "Permisos de Búsqueda",
   "SettingGroup_App_Permissions": "Permisos de Aplicaciones",
   "Setting_sound-startup_Name": "Sonido de Inicio Durante el Arranque",
   "Setting_sound-startup_Description": "Reproducir el sonido de inicio de Windows cuando el equipo arranca",
@@ -871,7 +871,7 @@
   "SettingGroup_USBsettings": "Configuración USB",
   "SettingGroup_IntelRGraphicsSettings": "Configuración de Gráficos Intel(R)",
   "SettingGroup_PowerButtonsandLid": "Botones de Energía y Tapa",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Administración de Energía del Procesador",
   "SettingGroup_MultimediaSettings": "Configuración Multimedia",
   "SettingGroup_Battery": "Batería",
