--- a/src/Winhance.WPF/Localization/fr.json
+++ b/src/Winhance.WPF/Localization/fr.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Diffusion de contenu \u0026 publicité",
   "SettingGroup_Lock_Screen": "Écran de verrouillage",
   "SettingGroup_Speech": "Voix",
-  "SettingGroup_Inking_Typing_Personalization": "Personnalisation de l'écriture manuscrite et de la saisie",
+  "SettingGroup_Inking_and_typing_personalization": "Personnalisation de l'écriture manuscrite et de la saisie",
   "SettingGroup_Diagnostics_Feedback": "Diagnostics \u0026 commentaires",
   "SettingGroup_Activity_History": "Historique des activités",
-  "SettingGroup_Search_Permissions": "Autorisations de recherche",
+  "SettingGroup_Search_permissions": "Autorisations de recherche",
   "SettingGroup_App_Permissions": "Autorisations des applications",
   "Setting_sound-startup_Name": "Son de démarrage lors du démarrage",
   "Setting_sound-startup_Description": "Jouer le son de démarrage de Windows lors du démarrage de votre ordinateur",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "Paramètres USB",
   "SettingGroup_IntelRGraphicsSettings": "Paramètres graphiques Intel(R)",
   "SettingGroup_PowerButtonsandLid": "Boutons d'alimentation et couvercle",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Gestion de l'alimentation du processeur",
   "SettingGroup_MultimediaSettings": "Paramètres multimédia",
   "SettingGroup_Battery": "Batterie",
