--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "コンテンツ配信と広告",
   "SettingGroup_Lock_Screen": "ロック画面",
   "SettingGroup_Speech": "音声",
-  "SettingGroup_Inking_Typing_Personalization": "手描き入力と入力の個人設定",
+  "SettingGroup_Inking_and_typing_personalization": "手描き入力と入力の個人設定",
   "SettingGroup_Diagnostics_Feedback": "診断とフィードバック",
   "SettingGroup_Activity_History": "アクティビティ履歴",
-  "SettingGroup_Search_Permissions": "検索権限",
+  "SettingGroup_Search_permissions": "検索権限",
   "SettingGroup_App_Permissions": "アプリの権限",
   "Setting_sound-startup_Name": "起動時のスタートアップサウンド",
   "Setting_sound-startup_Description": "コンピュータの起動時にWindowsスタートアップサウンドを再生",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "USB設定",
   "SettingGroup_IntelRGraphicsSettings": "Intel(R)グラフィックス設定",
   "SettingGroup_PowerButtonsandLid": "電源ボタンとカバー",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "プロセッサの電源管理",
   "SettingGroup_MultimediaSettings": "マルチメディア設定",
   "SettingGroup_Battery": "バッテリー",
