--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Turinio pristatymas ir reklama",
   "SettingGroup_Lock_Screen": "Užrakinimo ekranas",
   "SettingGroup_Speech": "Kalba",
-  "SettingGroup_Inking_Typing_Personalization": "Rašymo ranka ir spausdinimo personalizavimas",
+  "SettingGroup_Inking_and_typing_personalization": "Rašymo ranka ir spausdinimo personalizavimas",
   "SettingGroup_Diagnostics_Feedback": "Diagnostika ir atsiliepimai",
   "SettingGroup_Activity_History": "Veiklos istorija",
-  "SettingGroup_Search_Permissions": "Paieškos teisės",
+  "SettingGroup_Search_permissions": "Paieškos teisės",
   "SettingGroup_App_Permissions": "Programų teisės",
   "Setting_sound-startup_Name": "Paleidimo garsas paleidžiant",
   "Setting_sound-startup_Description": "Leisti „Windows“ paleidimo garsą, kai jūsų kompiuteris paleidžiamas",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "USB nustatymai",
   "SettingGroup_IntelRGraphicsSettings": "Intel(R) grafikos nustatymai",
   "SettingGroup_PowerButtonsandLid": "Maitinimo mygtukai ir dangtis",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Procesoriaus energijos valdymas",
   "SettingGroup_MultimediaSettings": "Daugialypės terpės nustatymai",
   "SettingGroup_Battery": "Baterija",
