--- a/src/Winhance.WPF/Localization/lv.json
+++ b/src/Winhance.WPF/Localization/lv.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Satura piegāde un reklāma",
   "SettingGroup_Lock_Screen": "Bloķēšanas ekrāns",
   "SettingGroup_Speech": "Runas",
-  "SettingGroup_Inking_Typing_Personalization": "Rokraksta un rakstīšanas personalizēšana",
+  "SettingGroup_Inking_and_typing_personalization": "Rokraksta un rakstīšanas personalizēšana",
   "SettingGroup_Diagnostics_Feedback": "Diagnostika un atsauksmes",
   "SettingGroup_Activity_History": "Darbību vēsture",
-  "SettingGroup_Search_Permissions": "Meklēšanas atļaujas",
+  "SettingGroup_Search_permissions": "Meklēšanas atļaujas",
   "SettingGroup_App_Permissions": "Lietotņu atļaujas",
   "Setting_sound-startup_Name": "Startēšanas skaņa sāknēšanas laikā",
   "Setting_sound-startup_Description": "Atskaņot Windows startēšanas skaņu, kad dators tiek sāknēts",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "USB iestatījumi",
   "SettingGroup_IntelRGraphicsSettings": "Intel(R) grafikas iestatījumi",
   "SettingGroup_PowerButtonsandLid": "Barošanas pogas un vāks",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Procesora enerģijas pārvaldība",
   "SettingGroup_MultimediaSettings": "Multivides iestatījumi",
   "SettingGroup_Battery": "Akumulators",
