--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -395,10 +395,10 @@
   "SettingGroup_Content_Delivery_Advertising": "Entrega de Conteúdo e Publicidade",
   "SettingGroup_Lock_Screen": "Tela de Bloqueio",
   "SettingGroup_Speech": "Fala",
-  "SettingGroup_Inking_Typing_Personalization": "Personalização de escrita e digitação",
+  "SettingGroup_Inking_and_typing_personalization": "Personalização de escrita e digitação",
   "SettingGroup_Diagnostics_Feedback": "Diagnóstico e Feedback",
   "SettingGroup_Activity_History": "Histórico de Atividades",
-  "SettingGroup_Search_Permissions": "Permissões de Pesquisa",
+  "SettingGroup_Search_permissions": "Permissões de Pesquisa",
   "SettingGroup_App_Permissions": "Permissões de Aplicativos",
   "Setting_sound-startup_Name": "Som de Inicialização",
   "Setting_sound-startup_Description": "Tocar o som de inicialização do Windows quando o computador iniciar",
@@ -869,7 +869,7 @@
   "SettingGroup_USBsettings": "Configurações de USB",
   "SettingGroup_IntelRGraphicsSettings": "Configurações Gráficas Intel(R)",
   "SettingGroup_PowerButtonsandLid": "Botões de Energia e Tampa",
-  "SettingGroup_PCIExpress": "PCI Express",
+  "SettingGroup_PCI_Express": "PCI Express",
   "SettingGroup_ProcessorPowerManagement": "Gerenciamento de Energia do Processador",
   "SettingGroup_MultimediaSettings": "Configurações de Multimídia",
   "SettingGroup_Battery": "Bateria",
