Fix .JSON Language Files escaping issues

--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -1123,7 +1123,7 @@
   "Startup_Backup_RestoreEnabled": "Przywracanie systemu było wyłączone i jest teraz włączone.",
   "Startup_Backup_Created": "Utworzono:",
   "Startup_Backup_RegistryBackups": "• Kopie zapasowe rejestru ({0} gałęzi) w:",
-  "Startup_Backup_RegistryPath": "  C:\ProgramData\Winhance\Backups",
+  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Punkt przywracania systemu: 'Winhance Initial Restore Point'",
   "Startup_Backup_ToRestore": "Aby przywrócić:",
   "Startup_Backup_RestoreInstructions_System": "• System: Otwórz 'Utwórz punkt przywracania' w Ustawieniach > Przywracanie systemu",
@@ -1138,8 +1138,8 @@
   "Startup_Migration_SubTitle": "Migracja Winhance",
   "Startup_Migration_Intro": "Winhance zaktualizowało lokalizację skryptów usuwania aplikacji Windows.",
   "Startup_Migration_WhatChanged": "Co się zmieniło:",
-  "Startup_Migration_OldLocation": "• Stara lokalizacja: %LOCALAPPDATA%\Winhance\Scripts",
-  "Startup_Migration_NewLocation": "• Nowa lokalizacja: C:\ProgramData\Winhance\Scripts",
+  "Startup_Migration_OldLocation": "• Stara lokalizacja: %LOCALAPPDATA%\\Winhance\\Scripts",
+  "Startup_Migration_NewLocation": "• Nowa lokalizacja: C:\\ProgramData\\Winhance\\Scripts",
   "Startup_Migration_TasksDeleted": "• Usunięto {0} stare zadanie(a) zaplanowane",
   "Startup_Migration_ScriptsRenamed": "• Zmieniono nazwę {0} starego(ych) skryptu(ów) na .old",
   "Startup_Migration_ImportantInfo": "Ważne informacje:",
