--- a/src/Winhance.WPF/Localization/sv.json
+++ b/src/Winhance.WPF/Localization/sv.json
@@ -1123,7 +1123,7 @@
   "Startup_Backup_RestoreEnabled": "Systemåterställning var inaktiverad och är nu aktiverad.",
   "Startup_Backup_Created": "Skapad:",
   "Startup_Backup_RegistryBackups": "• Register säkerhetskopior ({0} hives) på:",
-  "Startup_Backup_RegistryPath": "  C:\ProgramData\Winhance\Backups",
+  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Systemåterställningspunkt: 'Winhance initial återställningspunkt'",
   "Startup_Backup_ToRestore": "För att återställa:",
   "Startup_Backup_RestoreInstructions_System": "• System: Öppna 'Skapa en återställningspunkt' i Inställningar > Systemåterställning",
@@ -1138,8 +1138,8 @@
   "Startup_Migration_SubTitle": "Winhance-migrering",
   "Startup_Migration_Intro": "Winhance har uppdaterat platsen för skript för borttagning av Windows-appar.",
   "Startup_Migration_WhatChanged": "Vad som har ändrats:",
-  "Startup_Migration_OldLocation": "• Gammal plats: %LOCALAPPDATA%\Winhance\Scripts",
-  "Startup_Migration_NewLocation": "• Ny plats: C:\ProgramData\Winhance\Scripts",
+  "Startup_Migration_OldLocation": "• Gammal plats: %LOCALAPPDATA%\\Winhance\\Scripts",
+  "Startup_Migration_NewLocation": "• Ny plats: C:\\ProgramData\\Winhance\\Scripts",
   "Startup_Migration_TasksDeleted": "• Tog bort {0} gamla schemalagda uppgift(er)",
   "Startup_Migration_ScriptsRenamed": "• Döpte om {0} gamla skript till .old",
   "Startup_Migration_ImportantInfo": "Viktig information:",
