--- a/src/Winhance.WPF/Localization/uk.json
+++ b/src/Winhance.WPF/Localization/uk.json
@@ -1122,7 +1122,7 @@
   "Startup_Backup_RestoreEnabled": "Відновлення системи було вимкнено, а тепер увімкнено.",
   "Startup_Backup_Created": "Створено:",
   "Startup_Backup_RegistryBackups": "• Резервні копії реєстру ({0} кущів) за адресою:",
-  "Startup_Backup_RegistryPath": "  C:\ProgramData\Winhance\Backups",
+  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Точка відновлення системи: 'Початкова точка відновлення Winhance'",
   "Startup_Backup_ToRestore": "Для відновлення:",
   "Startup_Backup_RestoreInstructions_System": "• Система: Відкрийте 'Створити точку відновлення' в Налаштуваннях > Відновлення системи",
@@ -1137,8 +1137,8 @@
   "Startup_Migration_SubTitle": "Міграція Winhance",
   "Startup_Migration_Intro": "Winhance оновив розташування скриптів видалення додатків Windows.",
   "Startup_Migration_WhatChanged": "Що змінилося:",
-  "Startup_Migration_OldLocation": "• Старе розташування: %LOCALAPPDATA%\Winhance\Scripts",
-  "Startup_Migration_NewLocation": "• Нове розташування: C:\ProgramData\Winhance\Scripts",
+  "Startup_Migration_OldLocation": "• Старе розташування: %LOCALAPPDATA%\\Winhance\\Scripts",
+  "Startup_Migration_NewLocation": "• Нове розташування: C:\\ProgramData\\Winhance\\Scripts",
   "Startup_Migration_TasksDeleted": "• Видалено {0} старих запланованих завдань",
   "Startup_Migration_ScriptsRenamed": "• Перейменовано {0} старих скриптів на .old",
   "Startup_Migration_ImportantInfo": "Важлива інформація:",
