--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -1123,7 +1123,7 @@
   "Startup_Backup_RestoreEnabled": "Khôi phục Hệ thống đã bị tắt và hiện đã được bật.",
   "Startup_Backup_Created": "Đã tạo:",
   "Startup_Backup_RegistryBackups": "• Sao lưu sổ đăng ký ({0} hives) tại:",
-  "Startup_Backup_RegistryPath": "  C:\ProgramData\Winhance\Backups",
+  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• Điểm khôi phục hệ thống: 'Điểm khôi phục ban đầu của Winhance'",
   "Startup_Backup_ToRestore": "Để khôi phục:",
   "Startup_Backup_RestoreInstructions_System": "• Hệ thống: Mở 'Tạo điểm khôi phục' trong Cài đặt > Khôi phục Hệ thống",
@@ -1138,8 +1138,8 @@
   "Startup_Migration_SubTitle": "Di chuyển Winhance",
   "Startup_Migration_Intro": "Winhance đã cập nhật vị trí của các tập lệnh xóa Ứng dụng Windows.",
   "Startup_Migration_WhatChanged": "Đã thay đổi gì:",
-  "Startup_Migration_OldLocation": "• Vị trí cũ: %LOCALAPPDATA%\Winhance\Scripts",
-  "Startup_Migration_NewLocation": "• Vị trí mới: C:\ProgramData\Winhance\Scripts",
+  "Startup_Migration_OldLocation": "• Vị trí cũ: %LOCALAPPDATA%\\Winhance\\Scripts",
+  "Startup_Migration_NewLocation": "• Vị trí mới: C:\\ProgramData\\Winhance\\Scripts",
   "Startup_Migration_TasksDeleted": "• Đã xóa {0} tác vụ đã lên lịch cũ",
   "Startup_Migration_ScriptsRenamed": "• Đã đổi tên {0} tập lệnh cũ thành .old",
   "Startup_Migration_ImportantInfo": "Thông tin quan trọng:",
