--- a/src/Winhance.WPF/Localization/zh-Hant.json
+++ b/src/Winhance.WPF/Localization/zh-Hant.json
@@ -411,7 +411,7 @@
   "Setting_sound-narrator-audio-ducking_Name": "旁白音訊閃避",
   "Setting_sound-narrator-audio-ducking_Description": "允許「旁白」說話時自動降低其他應用程式的音量",
   "Setting_sound-voice-activation_Name": "應用程式語音啟動",
-  "Setting_sound-voice-activation_Description": "允許應用程式聆聽並回應語音指令（如 "Hey Cortana"）",
+  "Setting_sound-voice-activation_Description": "允許應用程式聆聽並回應語音指令（如 \"Hey Cortana\"）",
   "Setting_sound-voice-activation-last-used_Name": "上次使用的語音啟動設定",
   "Setting_sound-voice-activation-last-used_Description": "記住並套用最近使用的語音啟動設定",
   "Setting_sound-accessibility-activation_Name": "協助工具啟動音效",
@@ -1123,7 +1123,7 @@
   "Startup_Backup_RestoreEnabled": "系統還原原為停用狀態，現已啟用。",
   "Startup_Backup_Created": "建立於：",
   "Startup_Backup_RegistryBackups": "• 登錄檔備份 ({0} 個登錄區) 位於：",
-  "Startup_Backup_RegistryPath": "  C:\ProgramData\Winhance\Backups",
+  "Startup_Backup_RegistryPath": "  C:\\ProgramData\\Winhance\\Backups",
   "Startup_Backup_RestorePoint": "• 系統還原點：「Winhance 初始還原點」",
   "Startup_Backup_ToRestore": "若要還原：",
   "Startup_Backup_RestoreInstructions_System": "• 系統：開啟 設定 > 系統還原 中的「建立還原點」",
@@ -1138,8 +1138,8 @@
   "Startup_Migration_SubTitle": "Winhance 遷移",
   "Startup_Migration_Intro": "Winhance 已更新 Windows 應用程式移除指令碼的位置。",
   "Startup_Migration_WhatChanged": "變更內容：",
-  "Startup_Migration_OldLocation": "• 舊位置：%LOCALAPPDATA%\Winhance\Scripts",
-  "Startup_Migration_NewLocation": "• 新位置：C:\ProgramData\Winhance\Scripts",
+  "Startup_Migration_OldLocation": "• 舊位置：%LOCALAPPDATA%\\Winhance\\Scripts",
+  "Startup_Migration_NewLocation": "• 新位置：C:\\ProgramData\\Winhance\\Scripts",
   "Startup_Migration_TasksDeleted": "• 已移除 {0} 個舊的排程工作",
   "Startup_Migration_ScriptsRenamed": "• 已將 {0} 個舊的指令碼重新命名為 .old",
   "Startup_Migration_ImportantInfo": "重要資訊：",
